imports/ingress/99-apple-echo-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apple-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
