imports/ingress/99-banana-echo-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: banana-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
      paths:
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 5678
